  JFrames.

* Introduced Launcher class so that examples can be run easily from the command
  line.

* Changed the Mona Lisa example to accept the URL of an alternate image when
  run from the command line.

* Moved NullFitnessEvaluator from interactive package to framework package and
  made it package scope.  This class is an implementation detail and should not
  be exposed by the API.


Changes in version 0.6.0
------------------------

* Added the option to view only the most recent 200 generations on the
  population fitness graph of the evolution monitor.

* Fixed a bug that prevented the population fitness view from being reset
  between runs.

* Added more information to the evolution monitor status bar.

* Added a boolean parameter to the evolution monitor showInFrame method so that
  you can specify whether closing the frame should terminate the program.

* Enhancements to the Mona Lisa example application (it's now an applet).

* Added methods to the EvolutionEngine interface to allow the entire population
  to be returned from an evolutionary algorithm rather than just the fittest
  candidate.

* Introduced CachingFitnessEvaluator, a decorator for standard fitness
  functions that caches the results of its calculations.  If the evaluator is
  invoked twice for the same candidate, the cached value is returned by the
  second invocation thus avoiding the expense of recalculating the fitness
  score.  This is a useful optimisation in scenarios where some canidates
  survive from generation to generation unmodified (elitism is one example of
  this).

* Introduced dependency on Google Collections (to support the
  CachingFitnessEvaluator).

* Fixed ProbabilityParameterControl so that it allows the slider to move all
  the way to the maximum permitted value (ISSUE#10).

* Moved classes from Uncommons Utils module into the main framework module and
  removed the util module.

* Added SelectionStrategyControl to the Swing module.  This control enables the